infra/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: n8n
spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
        matchLabels:
            app: n8n
    template:
        metadata:
            labels:
                app: n8n
        spec:
            containers:
                - name: n8n
                  image: n8nio/n8n:latest
                  securityContext:
                      privileged: true
                  resources:
                      limits:
                          memory: "1024Mi"
                          cpu: "500m"
                      requests:
                          memory: "512Mi"
                          cpu: "256m"
                  volumeMounts:
                      - mountPath: /home/node/.n8n
                        name: n8n-nfs-mount
                  ports:
                      # - containerPort: 80
                      #   name: http
                      #   protocol: TCP
                      - containerPort: 5678
                        name: n8n
                        protocol: TCP
                      - containerPort: 5679
                        name: n8n-broker
                        protocol: TCP
                - name: task-runners
                  image: n8nio/runners:latest
                  resources:
                      limits:
                          memory: "1024Mi"
                          cpu: "500m"
                      requests:
                          memory: "512Mi"
                          cpu: "256m"
                - name: postgres
                  image: postgres:15
                  ports:
                      - containerPort: 5432
                  resources:
                      limits:
                          cpu: 512m
                          memory: 256Mi
                      requests:
                          cpu: 256m
                          memory: 128Mi
                  volumeMounts:
                      - mountPath: /var/lib/postgresql/data
                        name: pgsql-nfs-mount
                - name: nginx
                  image: kklein90/n8n-nginx:latest
                  ports:
                      - containerPort: 80
                  resources:
                      limits:
                          cpu: 256m
                          memory: 64Mi
                      requests:
                          cpu: 256m
                          memory: 64Mi
            volumes:
                - name: pgsql-nfs-mount
                  nfs:
                      server: k8s-master.kwkc.home
                      path: /mnt/postgres
                      readOnly: false
                - name: n8n-nfs-mount
                  nfs:
                      server: k8s-master.kwkc.home
                      path: /mnt/n8n
                      readOnly: false
