infra/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: n8n-svc
    labels:
        app.kubernetes.io/name: n8n
        app: n8n
        service: n8n-svc
spec:
    ports:
        - name: http
          targetPort: 5678
          port: 81
    selector:
        app: n8n
---
apiVersion: v1
kind: Service
metadata:
    labels:
        service: postgres-n8n
        app: postgres
    name: postgres-service
    namespace: default
spec:
    clusterIP: None
    ports:
        - name: "5432"
          port: 5432
          targetPort: 5432
          protocol: TCP
    selector:
        service: n8n
---
apiVersion: v1
kind: Service
metadata:
    labels:
        service: n8n-svc-nginx
        app: nginx
    name: n8n-svc-nginx
    namespace: default
spec:
    clusterIP: None
    ports:
        - name: "http"
          port: 80
          targetPort: 80
          protocol: TCP
    selector:
        service: n8n
